--- a/Areas/Admin/Views/Banners/Create.cshtml
+++ b/Areas/Admin/Views/Banners/Create.cshtml
@@ -1,14 +1,9 @@
 ﻿@model HoiTroWebsite.Models.Banner
 
-@{
-    ViewBag.Title = "Create";
-    Layout = "~/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml";
-}
-
 <h2>Create</h2>
 
 
-@using (Html.BeginForm("Create", "Banners", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Create", "Banners", FormMethod.Post, new { enctype = "multipart/form-data", @id = "form-create" }))
 {
     @Html.AntiForgeryToken()
 
@@ -80,7 +75,7 @@
     </div>
 }
 
-<div>
+@*<div>
     @Html.ActionLink("Back to List", "Index")
 </div>
 
@@ -129,4 +124,4 @@
             }).keyup();
         });
     </script>
-}
+}*@
