--- a/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml
+++ b/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml
@@ -9,10 +9,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Bootstrap Admin Theme</title>
+    <title>Admin Hỏi trọ website</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="~/Areas/Admin/Content/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    @*<link href="~/Content/bootstrap.min.css" rel="stylesheet"/>*@
 
     <!-- MetisMenu CSS -->
     <link href="~/Areas/Admin/Content/vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
@@ -29,9 +30,11 @@
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="https://oss   
+    maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
+    @RenderSection("_Header", false)
 
 </head>
 
@@ -48,7 +51,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">SB Admin v2.0</a>
+                <a class="navbar-brand">WellCome</a>
             </div>
             <!-- /.navbar-header -->
 
@@ -280,7 +283,10 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                            <a href="@Url.Action("Index", "Menus", new { area = "Admin" })">
+                                <i class="fa fa-dashboard fa-fw"></i> Quản lý Menu
+                            </a>
+
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
@@ -396,11 +402,16 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="~/Areas/Admin/Content/dist/js/sb-admin-2.js"></script>
-
-    @RenderSection("_Header", false)
+    @*<script src="~/Scripts/bootstrap.min.js"></script>*@
+    @*<script src="https://cdn.jsdelivr.net/npm/@@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>*@
+    @*<script src="~/Scripts/bootstrap.bundle.min.js"></script>*@
     @RenderSection("_Footer", false)
     @RenderSection("Scripts", false)
-    Scripts
-</body>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
 
+    <link rel="stylesheet" href="~/Areas/Admin/Content/vendor/datatables/css/jquery.dataTables.min.css">
+    <script src="~/Areas/Admin/Content/js/jquery-3.6.0.min.js"></script>
+    <script src="~/Areas/Admin/Content/vendor/datatables/js/jquery.dataTables.min.js"></script>
+</body>
 </html>
