--- a/Areas/Admin/Views/Accounts/Delete.cshtml
+++ b/Areas/Admin/Views/Accounts/Delete.cshtml
@@ -1,10 +1,5 @@
 ﻿@model HoiTroWebsite.Models.Account
 
-@{
-    ViewBag.Title = "Delete";
-    Layout = "~/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml";
-}
-
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
@@ -16,6 +11,10 @@
             @Html.DisplayName("Tên người dùng")
         </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.name)
+        </dd>
+
         <dt>
             @Html.DisplayName("Ảnh đại diện")
         </dt>
@@ -24,10 +23,6 @@
             <div class="col-md-4">
                 <img src="~/Content/images/@Model.avtImage" width="100px" /> <!--Lưu ý quyết định nd lưu imagePath trên csdl-->
             </div>
-        </dd>
-
-        <dd>
-            @Html.DisplayFor(model => model.name)
         </dd>
 
         <dt>
@@ -61,14 +56,6 @@
         <dd>
             @Html.DisplayFor(model => model.FBlink)
         </dd>
-
-        @*<dt>
-            @Html.DisplayName("Mật khẩu")
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.password)
-        </dd>*@
 
         <dt>
             @Html.DisplayNameFor(model => model.meta)
@@ -104,12 +91,13 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm("DeleteConfirmed", "Accounts", FormMethod.Post, new { id = "form-delete" }))
+    {
         @Html.AntiForgeryToken()
+        @Html.HiddenFor(model => model.id) <!-- Ẩn trường id để lấy id -->
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-default" />
         </div>
     }
 </div>
