--- a/Areas/Admin/Views/Accounts/Edit.cshtml
+++ b/Areas/Admin/Views/Accounts/Edit.cshtml
@@ -1,14 +1,8 @@
 ﻿@model HoiTroWebsite.Models.Account
 
-@{
-    ViewBag.Title = "Edit";
-    Layout = "~/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml";
-}
-
 <h2>Edit</h2>
 
-
-@using (Html.BeginForm("Edit","Accounts", FormMethod.Post, new { enctype = "multipart/form-data"}))
+@using (Html.BeginForm("Edit","Accounts", FormMethod.Post, new { enctype = "multipart/form-data", @id = "form-edit"}))
 {
     @Html.AntiForgeryToken()
     
@@ -104,36 +98,10 @@
         </div>
     </div>
 
-    @*<div class="form-group">
-        @Html.Label("Ngày tạo tài khoản", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.datebegin, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.datebegin, "", new { @class = "text-danger" })
-        </div>
-    </div>*@
-
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Save" class="btn btn-default" />
         </div>
     </div>
 </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-<script>
-    function previewImage(event) {
-        var reader = new FileReader();
-        reader.onload = function () {
-            var output = document.getElementById('preview');
-            output.src = reader.result;
-        };
-        reader.readAsDataURL(event.target.files[0]);
-    }
-</script>
 }
