--- a/Areas/Admin/Views/Footers/Delete.cshtml
+++ b/Areas/Admin/Views/Footers/Delete.cshtml
@@ -1,10 +1,5 @@
 ﻿@model HoiTroWebsite.Models.Footer
 
-@{
-    ViewBag.Title = "Delete";
-    Layout = "~/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml";
-}
-
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
@@ -158,12 +153,13 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm("DeleteConfirmed", "Banners", FormMethod.Post, new { id = "form-delete" }))
+    {
         @Html.AntiForgeryToken()
+        @Html.HiddenFor(model => model.id) <!-- Ẩn trường id để lấy id -->
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-default" />
         </div>
     }
 </div>
