--- a/Views/HomePage/getBanner.cshtml
+++ b/Views/HomePage/getBanner.cshtml
@@ -18,7 +18,7 @@
             @foreach (var i in Model)
             {
                 <div class="carousel-item @(j == 0 ? "active" : "")">
-                    <img class="first-slide" src="~/Content/images/@i.img" alt="First slide">
+                    <img class="first-slide" src="~/Content/images/@i.img" alt="First slide" height="" width="">
                 </div>
                 j = j + 1;
             }
