--- a/Areas/Admin/Views/Footers/Index.cshtml
+++ b/Areas/Admin/Views/Footers/Index.cshtml
@@ -1,11 +1,9 @@
-﻿@using HoiTroWebsite.Help
-@model IEnumerable<HoiTroWebsite.Models.Footer>
+﻿@model IEnumerable<HoiTroWebsite.Models.Footer>
 
 @{
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml";
 }
-
 
 <button class="btn btn-success text-white" id="btnAdd">
 
