--- a/Areas/Admin/Views/Menus/Delete.cshtml
+++ b/Areas/Admin/Views/Menus/Delete.cshtml
@@ -1,10 +1,5 @@
 ﻿@model HoiTroWebsite.Models.Menu
 
-@{
-    ViewBag.Title = "Delete";
-    Layout = "~/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml";
-}
-
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
@@ -68,25 +63,15 @@
             @Html.DisplayFor(modelItem => Model.hasSubMenu)
         </dd>
 
-        <dt>
-            @Html.DisplayName("Menu con")
-        </dt>
-
-        @foreach (var s in Model.SubMenus)
-        {
-        <dd>
-            @Html.DisplayFor(models => s.name)
-        </dd>
-        }
-
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm("DeleteConfirmed", "Menus", FormMethod.Post, new { id = "form-delete" }))
+    {
         @Html.AntiForgeryToken()
+        @Html.HiddenFor(model => model.id) <!-- Ẩn trường id để lấy id -->
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-default" />
         </div>
     }
 </div>
