--- a/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml
+++ b/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml
@@ -282,11 +282,22 @@
                             </div>
                             <!-- /input-group -->
                         </li>
+                        @*<li>
+            <a href="@Url.Action("Index", "Menus", new { area = "Admin" })">
+                <i class="fa fa-dashboard fa-fw"></i> Quản lý Menu
+            </a>
+        </li>*@
                         <li>
-                            <a href="@Url.Action("Index", "Menus", new { area = "Admin" })">
-                                <i class="fa fa-dashboard fa-fw"></i> Quản lý Menu
-                            </a>
-
+                            <a href="@Url.Action("Index", "Menus", new { area = "Admin" })"><i class="fa fa-bar-chart-o fa-fw"></i>Quản lý Menu<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href="@Url.Action("Index", "SubMenus", new { area = "Admin" })">Quản lý Menu con</a>
+                                </li>
+                                @*<li>
+                    <a href="morris.html">Morris.js Charts</a>
+                </li>*@
+                            </ul>
+                            <!-- /.nav-second-level -->
                         </li>
                         <li>
                             <a href="@Url.Action("Index", "Banners", new { area = "Admin" })">
@@ -307,17 +318,12 @@
 
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="flot.html">Flot Charts</a>
-                                </li>
-                                <li>
-                                    <a href="morris.html">Morris.js Charts</a>
-                                </li>
-                            </ul>
-                            <!-- /.nav-second-level -->
+                            <a href="@Url.Action("Index", "Mentors", new { area = "Admin" })">
+                                <i class="fa fa-dashboard fa-fw"></i> Quản lý Mentor
+                            </a>
+
                         </li>
+
                         <li>
                             <a href="tables.html"><i class="fa fa-table fa-fw"></i> Tables</a>
                         </li>
